--- a/src/hotel.html
+++ b/src/hotel.html
@@ -7,6 +7,9 @@
     <!-- title -->
     <title>Page title</title>
 
+    <!-- fonts -->
+    <link rel="stylesheet" href="./sass/base/_fonts.scss" />
+
     <!-- base styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
 
