--- a/src/room-luxe.html
+++ b/src/room-luxe.html
@@ -7,6 +7,9 @@
     <!-- title -->
     <title>Page title</title>
 
+    <!-- fonts -->
+    <link rel="stylesheet" href="./sass/base/_fonts.scss" />
+
     <!-- base styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
 
@@ -20,7 +23,6 @@
     <main>
       <include src="./partials/pages/room-luxe/hero.html"></include>
       <include src="./partials/pages/room-luxe/amenities.html"></include>
-      
     </main>
     <!-- footer -->
     <include src="./partials/footer.html"></include>
