--- a/src/room-for-2.html
+++ b/src/room-for-2.html
@@ -7,6 +7,9 @@
     <!-- title -->
     <title>Page title</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+
     <!-- fonts -->
     <link rel="stylesheet" href="./sass/base/_fonts.scss" />
 
