--- a/src/room-for-3.html
+++ b/src/room-for-3.html
@@ -10,9 +10,6 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./favicon/favicon.ico" />
 
-    <!-- fonts -->
-    <link rel="stylesheet" href="./sass/base/_fonts.scss" />
-
     <!-- base styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
 
@@ -33,5 +30,11 @@
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-price.html"></include>
+
+    <!-- modal script -->
+    <script src="./js/modal.js"></script>
+
+    <!-- slider script -->
+    <script src="./js/slider.js"></script>
   </body>
 </html>
