add bibliotec slider

--- a/src/hotel.html
+++ b/src/hotel.html
@@ -7,6 +7,21 @@
     <!-- title -->
     <title>Page title</title>
 
+    <!-- slick  -->
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
+
+
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
@@ -60,7 +75,18 @@
     <!-- modal script -->
     <script src="./js/modal.js"></script>
 
+    <!-- jquery script -->
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+
     <!-- slider script -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/slider.js"></script>
   </body>
 </html>
