update modal-price html and scss

--- a/src/room-for-3.html
+++ b/src/room-for-3.html
@@ -71,7 +71,7 @@
     <include src="./partials/modal-price.html"></include>
 
     <!-- modal script -->
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
 
     <!-- jquery script -->
     <script
