little fixes arch modal

--- a/src/hotel.html
+++ b/src/hotel.html
@@ -71,6 +71,8 @@
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-price.html"></include>
+    <include src="./partials/modal-price2r.html"></include>
+    <include src="./partials/modal-price3r.html"></include>
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
