--- a/src/hotel.html
+++ b/src/hotel.html
@@ -52,7 +52,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
 
     <!-- base js -->
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
   </head>
   <body>
     <!-- header -->
