--- a/src/hotel.html
+++ b/src/hotel.html
@@ -68,6 +68,7 @@
     <include src="./partials/footer.html"></include>
 
     <!-- modal -->
+    <include src="./partials/modal-table.html"></include>
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-price.html"></include>
     <include src="./partials/modal-price2r.html"></include>
@@ -75,6 +76,12 @@
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mod-table.js"></script>
+    <script src="./js/mod-room.js"></script>
+    <script src="./js/modprice.js"></script>
+    <script src="./js/modal-3.js"></script>
+    <script src="./js/modal-calc.js"></script>
+    <script src="./js/modal-calc3.js"></script>
 
     <!-- jquery script -->
     <script
