--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,8 @@
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mod-table.js"></script>
+    <script src="./js/mod-room.js"></script>
 
     <!-- jquery script -->
     <script
