--- a/src/index.html
+++ b/src/index.html
@@ -72,11 +72,15 @@
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-table.html"></include>
+    <include src="./partials/modal-detalis-room.html"></include>
+    <include src="./partials/modal-detalis-table.html"></include>
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
     <script src="./js/mod-table.js"></script>
     <script src="./js/mod-room.js"></script>
+    <script src="./js/mod-detalis-room.js"></script>
+    <script src="./js/mod-detalis-table.js"></script>
 
     <!-- jquery script -->
     <script
