add more more modals

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -69,13 +69,13 @@
     <!-- modal -->
     <include src="./partials/modal-table.html"></include>
     <include src="./partials/modal-room.html"></include>
-    <include src="./partials/modal-detalis-table.html"></include>
+    <include src="./partials/modal-menu-table.html"></include>
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
     <script src="./js/mod-table.js"></script>
     <script src="./js/mod-room.js"></script>
-    <script src="./js/mod-detalis-table.js"></script>
+    <script src="./js/mod-menu-table.js"></script>
 
     <!-- jquery script -->
     <script
