--- a/src/room-luxe.html
+++ b/src/room-luxe.html
@@ -21,7 +21,6 @@
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
 
-
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
@@ -68,10 +67,12 @@
 
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
-    <include src="./partials/modal-price.html"></include>
+    <include src="./partials/modal-price-luxe.html"></include>
 
     <!-- modal script -->
     <script src="./js/modal.js"></script>
+    <script src="./js/modprice-luxe.js"></script>
+    <script src="./js/mod-room.js"></script>
 
     <!-- jquery script -->
     <script
@@ -84,7 +85,10 @@
     ></script>
 
     <!-- slider script -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script src="./js/slider.js"></script>
   </body>
 </html>
