--- a/src/room-luxe.html
+++ b/src/room-luxe.html
@@ -73,6 +73,7 @@
     <script src="./js/modal.js"></script>
     <script src="./js/modprice-luxe.js"></script>
     <script src="./js/mod-room.js"></script>
+    <script src="./js/modal-calc.js"></script>
 
     <!-- jquery script -->
     <script
