add hhero room and fix modals and slider

--- a/src/hotel.html
+++ b/src/hotel.html
@@ -78,10 +78,12 @@
     <script src="./js/modal.js"></script>
     <script src="./js/mod-table.js"></script>
     <script src="./js/mod-room.js"></script>
-    <script src="./js/modprice.js"></script>
+    <script src="./js/mod-price.js"></script>
+    <script src="./js/mod-price2r.js"></script>
     <script src="./js/modal-3.js"></script>
     <script src="./js/modal-calc.js"></script>
     <script src="./js/modal-calc3.js"></script>
+    <script src="./js/modal-calc2.js"></script>
 
     <!-- jquery script -->
     <script
