--- a/src/room-for-2.html
+++ b/src/room-for-2.html
@@ -67,10 +67,12 @@
 
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
-    <include src="./partials/modal-price.html"></include>
+    <include src="./partials/modal-price-room-for-2.html"></include>
 
     <!-- modal script -->
-    <script src="./js/modal.js"></script>
+    <script src="./js/mod-room.js"></script>
+    <script src="./js/modprice-room-for-2.js"></script>
+    <script src="./js/modal-calc2.js"></script>
 
     <!-- jquery script -->
     <script
