--- a/src/hotel.html
+++ b/src/hotel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- title -->
-    <title>Page title</title>
+    <title>МІМІНО</title>
 
     <!-- slick  -->
     <!-- Add the slick-theme.css if you want default styling -->
