add modal for luxe

--- a/src/hotel.html
+++ b/src/hotel.html
@@ -70,6 +70,7 @@
     <!-- modal -->
     <include src="./partials/modal-table.html"></include>
     <include src="./partials/modal-room.html"></include>
+    <include src="./partials/modal-priceluxe.html"></include>
     <include src="./partials/modal-price.html"></include>
     <include src="./partials/modal-price2r.html"></include>
     <include src="./partials/modal-price3r.html"></include>
@@ -77,6 +78,7 @@
     <!-- modal script -->
     <script src="./js/mod-table.js"></script>
     <script src="./js/mod-room.js"></script>
+    <script src="./js/mod-price-luxe.js"></script>
     <script src="./js/mod-price.js"></script>
     <script src="./js/mod-price2r.js"></script>
     <script src="./js/modal-3.js"></script>
