add mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,9 @@
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
+    <!-- mobile menu -->
+    <script src="./js/mobile-menu.js"></script>
+
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-table.html"></include>
