--- a/src/hotel.html
+++ b/src/hotel.html
@@ -67,6 +67,9 @@
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
+    <!-- mobile menu -->
+    <script src="./js/mobile-menu.js"></script>
+
     <!-- modal -->
     <include src="./partials/modal-table.html"></include>
     <include src="./partials/modal-room.html"></include>
