--- a/src/room-for-2.html
+++ b/src/room-for-2.html
@@ -65,6 +65,9 @@
     <!-- footer -->
     <include src="./partials/footer.html"></include>
 
+    <!-- mobile menu -->
+    <script src="./js/mobile-menu.js"></script>
+
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
     <include src="./partials/modal-price-room-for-2.html"></include>
