final-fix-modals

--- a/src/room-luxe.html
+++ b/src/room-luxe.html
@@ -67,12 +67,12 @@
 
     <!-- modal -->
     <include src="./partials/modal-room.html"></include>
-    <include src="./partials/modal-price-luxe.html"></include>
+    <include src="./partials/modal-price-room-luxe.html"></include>
 
     <!-- modal script -->
-    <script src="./js/modprice-luxe.js"></script>
     <script src="./js/mod-room.js"></script>
-    <script src="./js/modal-calc.js"></script>
+    <script src="./js/modprice-room-luxe.js"></script>
+    <script src="./js/modal-calc-luxe.js"></script>
 
     <!-- jquery script -->
     <script
