--- a/src/hotel.html
+++ b/src/hotel.html
@@ -70,20 +70,21 @@
     <!-- modal -->
     <include src="./partials/modal-table.html"></include>
     <include src="./partials/modal-room.html"></include>
-    <include src="./partials/modal-priceluxe.html"></include>
     <include src="./partials/modal-price.html"></include>
-    <include src="./partials/modal-price2r.html"></include>
+    <include src="./partials/modal-priceluxe.html"></include>
     <include src="./partials/modal-price3r.html"></include>
+    <include src="./partials/modal-price2r.html"></include>
 
     <!-- modal script -->
     <script src="./js/mod-table.js"></script>
     <script src="./js/mod-room.js"></script>
-    <script src="./js/mod-price-luxe.js"></script>
     <script src="./js/mod-price.js"></script>
-    <script src="./js/mod-price2r.js"></script>
-    <script src="./js/modal-3.js"></script>
     <script src="./js/modal-calc.js"></script>
+    <script src="./js/mod-price-luxe.js"></script>
+    <script src="./js/modal-calc-luxe.js"></script>
+    <script src="./js/mod-price-3r.js"></script>
     <script src="./js/modal-calc3.js"></script>
+    <script src="./js/mod-price-2r.js"></script>
     <script src="./js/modal-calc2.js"></script>
 
     <!-- jquery script -->
